[gd_scene load_steps=2 format=3 uid="uid://bgux6rpndyvti"]

[ext_resource type="Script" uid="uid://dyjwco5suq2ty" path="res://Mesh/Materials/MyLayeredTexture/my_layered_texture.gd" id="1_rlhom"]

[node name="MyLayeredTexture" type="Node"]
script = ExtResource("1_rlhom")

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
use_hdr_2d = true
render_target_update_mode = 1

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SubViewport/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CacheTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="CacheTimer" to="." method="_on_cache_timer_timeout"]
